--- a/HW06_part2.Rmd
+++ b/HW06_part2.Rmd
@@ -52,20 +52,34 @@ cbind(cleaned_data$city, locations) %>%
 newcity<-cleaned_data %>% 
  select(city) %>% 
  separate(city,into = c("1","2","3"),sep=" ") 
-#delete punctuation
-newcity <- mapply(str_replace_all,newcity,",|-","") 
-knitr::kable(newcity)
+
+
+#Then we try to make the data cleaner delete punctuation
+newcity <- mapply(str_replace_all,newcity,".|,|-|=","") 
 
 ## second we need to extract the usel information from the city names
 stringlocation <- as.character(locations)
-newlocation <- str_extract_all(stringlocation[str_detect(stringlocation,"\\, [A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b")],"\\, [A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b",simplify = TRUE)
-City <- str_replace_all(newlocation[,1],", |,", "")
-newlocation[,1] = City
+
+newlocation <- 
+str_extract_all(
+  stringlocation[str_detect(stringlocation,
+"\\,[A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b")],"\\,[A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b",simplify = TRUE)
+
+
+# replace the , with nothing to delete nonnecessary parts
 knitr::kable(newlocation)
 
-
-
-result <- ((newlocation[,1]==newcity[,1])|(newlocation[,1]==newcity[,2])|(newlocation[,1]==newcity[,3])|(newlocation[,2]==newcity[,1])|(newlocation[,2]==newcity[,2])|(newlocation[,2]==newcity[,3])|(newlocation[,3]==newcity[,1])|(newlocation[,3]==newcity[,2])|(newlocation[,3]==newcity[,3]))
+# complete the table 
+# wether the place in `city` corresponds to the information you retrieved.
+result <- ((newlocation[,1]==newcity[,1])|
+             (newlocation[,1]==newcity[,2])|
+             (newlocation[,1]==newcity[,3])|
+             (newlocation[,2]==newcity[,1])|
+             (newlocation[,2]==newcity[,2])|
+             (newlocation[,2]==newcity[,3])|
+             (newlocation[,3]==newcity[,1])|
+             (newlocation[,3]==newcity[,2])|
+             (newlocation[,3]==newcity[,3]))
 result
 
 ```
@@ -75,15 +89,20 @@ result
 * If you still have time, you can go visual: give a look to the library leaflet and plot some information about the bands. A snippet of code is provided below.
 
 ```{r}
-map <- leaflet()  %>%   
-addCircles( lat=filter_NA_locations$latitude,
+# use leaflet to plot information
+map <- leaflet()  %>%  
+  addTitles()%>%
+addCircles( 
+            popup = filter_NA_locations$title,
+            lat=filter_NA_locations$latitude,
             lng=filter_NA_locations$longitude,
-            popup = filter_NA_locations$title) %>% 
+           ) %>% 
   addProviderTiles(providers$OpenStreetMap)
 
-#saveWidget(map, "map.html", selfcontained = FALSE)
-#webshot("map.html", file = "map.png",
-#        cliprect = "viewport")
+saveWidget(map, "map.html")
 
-#mapshot(map, file = "./map.png")
+webshot("map.html", file = "map.png",
+        cliprect = "viewport")
+
+mapshot(map, file = "./images/map.png")
 ```
