--- a/HW06_part2.Rmd
+++ b/HW06_part2.Rmd
@@ -60,7 +60,7 @@ stringlocation <- as.character(locations)
 newlocation <- 
 str_extract_all(
   stringlocation[str_detect(stringlocation,
-"\\,[A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b")],"\\,[A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b",simplify = TRUE)
+"\\b[A-Z]{2,}\\b")],"\\,[A-Z0-9].*[a-z]\\,|\\,[A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b",simplify = TRUE)
 
 
 # replace the , with nothing to delete nonnecessary parts
