--- a/HW06_part2.Rmd
+++ b/HW06_part2.Rmd
@@ -56,14 +56,21 @@ newcity <- mapply(str_replace_all,newcity,".|,|-|=","")
 
 ## second we need to extract the usel information from the city names
 stringlocation <- as.character(locations)
+```
 
+```{r}
 newlocation <- 
 str_extract_all(
   stringlocation[str_detect(stringlocation,
 "\\b[A-Z]{2,}\\b")],"\\,[A-Z0-9].*[a-z]\\,|\\,[A-Z0-9].*[a-z]\\,|\\b[A-Z]{2,}\\b",simplify = TRUE)
+```
 
-
-# replace the , with nothing to delete nonnecessary parts
+```{r}
+# We'll then find the city names
+Place <- str_replace_all(newlocation[,1],", |,", "")
+newlocation[,1] = Place
+knitr::kable(newlocation)
+# replace the ',' with nothing to delete nonnecessary parts
 knitr::kable(newlocation)
 
 # complete the table 
